--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <head>
     <title>Padaczka dostaje kopniaczka</title>
-    <script src="http://allegrojs.net/allegro.js"></script>
+    <script src="allegro.js"></script>
     <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="game.css">
 </head>
